--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ logo: gistemp.png
 ################################################################################
 # Information about where the book exists on the web
 repository:
-  url                       : https://github.com/kls2177/Climate-and-Geophysical-Data-Analysis  # Online location of your book
+  url                       : https://kls2177.github.io/Climate-and-Geophysical-Data-Analysis  # Online location of your book
   path_to_book              : path/to/book  # Optional path to your book, relative to the repository root
   branch                    : master  # Which branch of the repository should be used when creating links (optional)
 
@@ -15,7 +15,7 @@ repository:
 launch_buttons:
   binderhub_url: "https://mybinder.org"  # The URL for your BinderHub (e.g., https://mybinder.org)
 
-  colab_url: "https://colab.research.google.com"
+  #colab_url: "https://colab.research.google.com"
 
   thebe                  : true
 
