--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: gistemp.png
 # Information about where the book exists on the web
 repository:
   url                       : https://kls2177.github.io/Climate-and-Geophysical-Data-Analysis  # Online location of your book
-  path_to_book              : path/to/book  # Optional path to your book, relative to the repository root
+  path_to_book              : _build/html  # Optional path to your book, relative to the repository root
   branch                    : master  # Which branch of the repository should be used when creating links (optional)
 
 # Interactive
