--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Book settings
-title: Table of Contents
+title: ""
 author: Karen Smith
 description: >-
   Interactive courseware on climate and geophysical data analysis
