--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: Karen Smith
 description: >-
   Interactive courseware on climate and geophysical data analysis
 copyright: "2023"  # Copyright year to be placed in the footer
-logo: gistemp.png
+logo: landing_page.png
 ################################################################################
 # Execution settings
 execute:
@@ -22,7 +22,7 @@ html:
   extra_navbar              : Powered by <a href="https://jupyterbook.org">Jupyter Book</a>  # Will be displayed underneath the left navbar.
   extra_footer              : ""  # Will be displayed underneath the footer.
   google_analytics_id       : ""  # A GA id that can be used to track book views.
-  home_page_in_navbar       : true  # Whether to include your home page in the left Navigation Bar
+  home_page_in_navbar       : false  # Whether to include your home page in the left Navigation Bar
   baseurl                   : https://kls2177.github.io/Climate-and-Geophysical-Data-Analysis/chapters/index.html  # The base URL where your book will be hosted. Used for creating image previews and social links. e.g.: https://mypage.com/mybook/
 
 ################################################################################
